<resources>
    <string-array name="mu_arrays">
        <item>SAD</item>
        <item>SSD</item>
    </string-array>
    <string name="app_name">MU QC SRS</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="total_dose">Total dose (cGY)</string>
    <string name="number_fraction">Number of fraction</string>
    <string name="weight_dose_maximum">Weight at dose maximum</string>
    <string name="dose_fraction">Dose/Fraction</string>
    <string name="aver_depth_cm">Avg. Depth (mm)</string>
    <string name="peso_arco">Weight Factor</string>
    <string name="mu_tps">MU TPS</string>
    <string name="mu_qc_srs">MU QC SRS</string>
    <string name="title_section1">Arc 1</string>
    <string name="title_section2">Arc 2</string>
    <string name="title_section3">Arc 3</string>
    <string name="title_section4">Arc 4</string>
    <string name="title_section5">Arc 5</string>
    <string name="title_section6">Arc 6</string>
    <string name="title_section7">Arc 7</string>
    <string name="title_section8">Arc 8</string>
    <string name="title_section9">Arc 9</string>
    <string name="dosis_por_fraccion">Dose/Fraction</string>
    <string name="tmr">TMR</string>
    <string name="output_factor">Output Factor</string>
    <string name="action_settings">Upload</string>
    <string name="call_ocr_api">Call OCR API</string>
    <string name="ocr_api_result">OCR API RESULT</string>
    <string name="generar_reporte">Create Report</string>
    <string name="d_zero">D\'o</string>
    <string name="d_zeron">D\'o (Calibration setup for 1 cGy/MU at dmax)</string>
    <string name="energia">Energy (MV)</string>
    <string name="six_x">6X</string>
    <string name="title_dialog">MU QC SRS - PDF</string>
    <string name="msg_dialog">Do you want to view the report?</string>
    <string name="yes_dialog">Yes</string>
    <string name="no_dialog">No</string>
    <string name="succes_pdf">PDF successfully generated</string>
    <string name="arc19_saved">ARC 19 successfully saved</string>
    <string name="arc18_saved">ARC 18 successfully saved</string>
    <string name="arc17_saved">ARC 17 successfully saved</string>
    <string name="arc16_saved">ARC 16 successfully saved</string>
    <string name="arc15_saved">ARC 15 successfully saved</string>
    <string name="arc14_saved">ARC 14 successfully saved</string>
    <string name="arc13_saved">ARC 13 successfully saved</string>
    <string name="arc12_saved">ARC 12 successfully saved</string>
    <string name="arc10_saved">ARC 10 successfully saved</string>
    <string name="arc9_saved">ARC 9 successfully saved</string>
    <string name="arc8_saved">ARC 8 successfully saved</string>
    <string name="arc7_saved">ARC 7 successfully saved</string>
    <string name="arc6_saved">ARC 6 successfully saved</string>
    <string name="arc5_saved">ARC 5 successfully saved</string>
    <string name="arc4_saved">ARC 4 successfully saved</string>
    <string name="arc3_saved">ARC 3 successfully saved</string>
    <string name="arc2_saved">ARC 2 successfully saved</string>
    <string name="arc1_saved">ARC 1 successfully saved</string>
    <string name="result_warning">WARNING. The results from MU QC SRS should not be used to treat any
        patient.</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="contact_caps">CONTACT</string>
    <string name="country_ve">Country: Venezuela</string>
    <string name="url">www.fisicaderadiaciones.com.ve</string>
    <string name="site">Site:</string>
    <string name="city">City: Caracas</string>
    <string name="whatsapp">Whatsapp: +58 412 2337556</string>
    <string name="report">REPORT</string>
    <string name="field_empty">Empty fields in ARC:</string>
    <string name="treatment_percentage">Treatment Percentage</string>
    <string name="who_we_are">WHO WE ARE?</string>
    <string name="franklyn_reggio">MSc. Franklyn Reggio</string>
    <string name="jugleys_seijas">MSc. Jugleys Seijas</string>
    <string name="lk_franklyn_reggio">https://www.linkedin.com/in/franklyn-reggio-b469b1124/en</string>
    <string name="my_own_data">MY OWN DATA</string>
    <string name="my_own_content">Do you want to use your own SRS dosimetric data with MU QC SRS?</string>
    <string name="tolerance">TOLERANCE</string>
    <string name="tolerance_title">The Tolerances uses in MU QC SRS comes from 114 AAPM report published in 2011:</string>
    <string name="see_error">See error</string>

</resources>
<!---->