<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/contact_caps"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/title_size"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/site"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/secondary_text"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/url"
        android:autoLink="web"
        android:textColor="@color/secondary_text"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/country_ve"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/secondary_text"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content3" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/city"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:textColor="@color/secondary_text"
    android:textSize="22dp"
    android:textStyle="bold"
    android:id="@+id/content4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/whatsapp"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Email: radfis@gmail.com"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Thanks for contacting us, we will reply to you as soon as possible."
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/content_size"
        android:textColor="@color/secondary_text"
        android:id="@+id/content"
        android:layout_gravity="bottom" />


</LinearLayout>