<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark" />
    </android.support.design.widget.AppBarLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/who_we_are"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/title_size"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:id="@+id/title"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Servicios RADFIS C.A. Solutions in Radiations Physics"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textColor="@color/secondary_text"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/url"
        android:autoLink="web"
        android:textColor="@color/secondary_text"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content2"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/franklyn_reggio"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lk_franklyn_reggio"
        android:autoLink="web"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content6" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/jugleys_seijas"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:textSize="22dp"
        android:textStyle="bold"
        android:id="@+id/content7" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="https://www.linkedin.com/in/jugleys-seijas-a5111499/en"
        android:textColor="@color/secondary_text"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:textSize="22dp"
        android:autoLink="web"
        android:id="@+id/content8" />


</LinearLayout>