<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.ArcoActivity"
    tools:showIn="@layout/arco_data_layout">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cono"
        android:entries="@array/array_cono"
        android:spinnerMode="dialog" />

    <android.support.design.widget.TextInputLayout
        android:visibility="invisible"
        android:id="@+id/input_layout_output_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        android:imeOptions="actionDone"
        android:layout_below="@+id/cono"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <EditText
        android:id="@+id/input_output_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:hint="@string/output_factor"
        android:editable="false"
        android:imeOptions="actionDone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_profundidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cono"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        android:imeOptions="actionDone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/input_profundidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColorHint="@color/primary_text"
            android:hint="@string/profundidad" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_tmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:visibility="invisible"
        android:imeOptions="actionDone"
        android:textColorHint="@color/primary_text"
        android:layout_below="@+id/input_layout_profundidad">

    <EditText
        android:id="@+id/input_tmr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:hint="@string/tmr"
        android:editable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_peso_arco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:imeOptions="actionDone"
        android:textColorHint="@color/primary_text"
        android:layout_below="@id/input_layout_profundidad">

        <EditText
            android:id="@+id/input_peso_arco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColorHint="@color/primary_text"
            android:hint="@string/peso_arco" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_dosis_fraccion"
        android:layout_width="match_parent"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:visibility="invisible"
        android:layout_below="@id/input_layout_peso_arco">

    <EditText
        android:id="@+id/input_dosis_fraccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:hint="@string/dosis_por_fraccion"
        android:editable="false"
        android:layout_below="@+id/input_layout_peso_arco"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mu_tps"
        android:layout_width="match_parent"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:layout_below="@id/input_layout_peso_arco">

        <EditText
            android:id="@+id/input_mu_tps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColorHint="@color/primary_text"
            android:hint="@string/mu_tps" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_mu_qc_srs"
        android:layout_width="match_parent"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/primary_text"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:visibility="invisible"
        android:layout_below="@+id/input_layout_mu_tps">

    <EditText
        android:id="@+id/input_percentage_dif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:hint="@string/mu_qc_srs"
        android:editable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabarc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:tint="@color/icons"
        android:src="@drawable/ic_save_white_24dp" />

</RelativeLayout>
